--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "json-server": "json-server --watch --port 3000  db/products.json"
+    "json-server": "json-server --watch --port 3000 db/products.json",
+    "build:all": "concurrently \"npm run build\" \"npm run json-server\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -36,7 +37,8 @@
     "postcss": "^8.4.47",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "concurrently": "^8.2.0"
   },
   "eslintConfig": {
     "root": true,
